# raic-2019

./: CHANGELOG.md  README.md
aicup2019-linux/levels/: level.txt
app-src/: Cargo.toml  README.md  server.Dockerfile  test-config.json
app-src/src/: keyboard_player.rs  level_editor.rs  lib.rs  main.rs  quickstart_player.rs  random_player.rs  translations.txt
app-src/src/model/: action.rs  bullet.rs  custom_data.rs  game.rs  loot.rs  mine.rs  mod.rs  options.rs  properties.rs  unit.rs  weapon.rs
app-src/src/model/level/: complex.rs  mod.rs
app-src/src/renderer/: background.rs  bullet.rs  camera.rs  fancy_bullet.rs  fancy_explosion.rs  fancy_loot.rs  fancy_mine.rs  fancy_unit.rs  fancy_weapon.rs  level.rs  loot.rs  mine.rs  mod.rs  unit.rs  weapon.rs
app-src/src/renderer/custom/: mod.rs  program.glsl
app-src/src/renderer/fancy_level/: mod.rs  program.glsl
app-src/src/renderer/simple/: mod.rs  program.glsl
app-src/src/renderer/sprite/: mod.rs  program.glsl
app-src/static/: aicup2019-preferences.json  index.html
app-src/static/levels/: level.txt
clients/cpp/: Debug.cpp  MyStrategy.cpp  MyStrategy.hpp  Stream.cpp  Stream.hpp  compile.sh  main.cpp
clients/csharp/: Dockerfile  MyStrategy.cs  Runner.cs  aicup2019.csproj  compile.sh
clients/dlang/: Dockerfile  compile.sh  dub.json
clients/fsharp/: Debug.fs  Dockerfile  MyStrategy.fs  Runner.fs  aicup2019.fsproj  compile.sh  run.sh
clients/go/: Dockerfile  debug.go  go.mod  main.go  my_strategy.go
clients/haskell/: .gitignore  README.md  package.yaml  raic19-haskell.cabal  stack.yaml
(+473 files in other folders)
