[package]
name = "aicup2019"
version = "1.3.0"
authors = ["kuviman <kuviman@gmail.com>"]
edition = "2018"
default-run = "aicup2019"

[features]
default = ["rendering"]
rendering = ["codegame/rendering"]

[dependencies]
codegame = { git = "https://github.com/codeforces/codegame", default-features = false }
serde = "1"
trans-gen = { git = "https://github.com/kuviman/trans-gen" }
structopt = "0.3"

[dev-dependencies]
tempfile = "3"