[package]
name = "aicup2019"
version = "1.3.1"
authors = ["kuviman <kuviman@gmail.com>"]
edition = "2018"
default-run = "aicup2019"

# [lib]
# crate-type = ["cdylib"]

[features]
default = ["rendering"]
rendering = ["codegame/rendering"]

[dependencies]
codegame = { version = "0.3", default-features = false }
serde = "1"
trans-gen = "0.1"
structopt = "0.3"

[dev-dependencies]
tempfile = "3"